# FSPodium

./: .env.template  README.md  docker-compose.yml
bot/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
bot/src/: main.py
bot/src/filters/: __init__.py  _admin.py  _authorized.py
bot/src/handlers/: __init__.py  _accept.py  _admin_event_requests.py  _admin_rep_requests.py  _admin_support.py  _help.py  _logout.py  _personal_info.py  _reject.py  _start.py  _support.py  _unknown.py
bot/src/routes/: __init__.py  _admin_event_notifications.py  _admin_rep_notifications.py  _admin_support.py  _auth.py  _common_notifications.py  _presonal_info.py
bot/src/setup/: __init__.py  pyro_client.py  sqlite_orm.py  web.py
bot/src/utils/: token.py
file-service/: FSPodium-file-service.sln  README.md  docker-compose.yml
generator/: FSPodium-generator.sln  docker-compose.yml
generator/FSPodium-generator/: Dockerfile  FSPodium-generator.csproj  (+1 more)
migrator/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
migrator/data/: migrations.sql
migrator/src/: main.py  process.py
migrator/src/pdf_getter/: _download_file.py  _get_html_page.py  _get_pdf.py  _parse_file_url.py
migrator/src/pdf_parser/: _event_participants.py  _pdf_file.py  _pdf_page_text.py
notifications-service/: FSPodium-notification-service.sln  README.md  docker-compose.yml
report-parser/: Dockerfile  FSPodium-Parser.sln  README.md
web/: .dockerignore  .env.template  .eslintrc.json  .gitignore  Dockerfile  README.md  package.json  tailwind.config.ts
(+122 files in other folders)
